--- a/roles/puppet/tasks/agent.yml
+++ b/roles/puppet/tasks/agent.yml
@@ -4,6 +4,8 @@
     name: puppet-agent
     state: present
   when: ansible_os_family == "RedHat"
+  notify:
+  - Restart agent
 
 - name: Install puppet-agent on Debian
   apt:
@@ -11,3 +13,5 @@
     state: present
     update_cache: yes
   when: ansible_os_family == "Debian"
+  notify:
+  - Restart agent
